--- a/searchManager/WebContent/css/theme/red/style.css
+++ b/searchManager/WebContent/css/theme/red/style.css
@@ -294,8 +294,10 @@ a.btnGreen:hover 				{ text-decoration:none;  }
 .contentArea .leftSearch			{ background:url(images/icon-search.png) right center no-repeat #fff; height:18px; padding:3px 22px 3px 3px; margin:0}
 
 .contentArea .itemHolder			{ border-bottom:1px solid #ccc; font-family:arial; font-size:12px; color:#333; padding-top:8px; width:99.7%;  }
-.contentArea .itemText				{ float:left; width:70%; padding-left:5px } 
-.contentArea .itemLink				{ float:left; text-align:right; width:28%; }
+.contentArea .itemText				{ float:left; width:70%; padding-left:5px; } 
+.contentArea .itemLink				{ float:right; text-align:right; width:28%; }
+
+#keywordInRulePanel .itemText 		{ width: 240px; word-wrap: break-word;  }
 
 .contentArea .sideBottomPaging		{ margin:8px 0 0 -8px !important; }	
 
@@ -303,8 +305,6 @@ a.btnGreen:hover 				{ text-decoration:none;  }
 .contentArea .curveTR				{ position:absolute; top:0; right:0; display: none; }
 .contentArea .curveBL				{ position:absolute; bottom:0; left:0; display: none; }
 .contentArea .curveBR				{ position:absolute; bottom:0; right:0; display: none; }
-
-
 
 
 /* white corner curve */
